# sppid

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
docs/: requirements.txt
sppid/: cli.py  dca.py  io.py  modelling.py  plots.py  rf2t.py  scoring.py  screening.py
sppid/src_speedppi/alphafold/common/: protein.py  residue_constants.py
sppid/src_speedppi/alphafold/data/: foldonly.py  mmcif_parsing.py  pipeline.py  templates.py
sppid/src_speedppi/alphafold/data/tools/: hhsearch.py  kalign.py
sppid/src_speedppi/alphafold/model/: all_atom.py  folding.py  modules.py
sppid/src_speedppi/alphafold/model/tf/: proteins_dataset.py
sppid/structs/: misc.py  pdb.py
test/inputs/: 4G4S_O.a3m  4G4S_P.a3m  A0AA35IZH4_SACMI.a3m  A0AA35NF29_SACMI.a3m  CAPZA_YEAST.a3m  DYR_YEAST.a3m  RSP5_YEAST.a3m  STE2_YEAST.a3m  WWM1_YEAST.a3m
test/scripts/: test.sh
yunta/: cli.py  dca.py  dca_torch.py  io.py  modelling.py  plots.py  scoring.py  screening.py  weights.py
yunta/src_speedppi/alphafold/data/: foldonly.py  mmcif_parsing.py  msaonly.py  pipeline.py  templates.py
yunta/src_speedppi/alphafold/data/tools/: hhblits.py  hmmbuild.py  hmmsearch.py  jackhmmer.py
yunta/src_speedppi/alphafold/model/: all_atom.py  config.py  data.py  features.py  folding.py  model.py  modules.py  r3.py
yunta/src_speedppi/alphafold/model/tf/: data_transforms.py  input_pipeline.py  protein_features.py  shape_helpers_test.py
yunta/structs/: metrics.py  msa.py
