[project]
name = "yunta"
version = "0.0.1"
authors = [
  { name="Eachan Johnson", email="eachan.johnson@crick.ac.uk" },
]
description = "Predicting protein-protein interactions and structures from multiple sequence alignments."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["science", "biology", "systems biology", "biochemistry", "machine learning", "analysis", "deep learning", "alphafold2", "rosettafold"]

classifiers = [  
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [ 
  "absl-py",
  "bioino",
  "biopython",
  "carabiner-tools[mpl,pd]",
  "dm-haiku==0.0.12",
  "dm-tree",
  "jax",
  "ml-collections==0.1.0",
  "openpyxl==3.1.0", 
  "rf2t-micro",
  "requests",
  "tensorflow==2.17",
  "tensorrt",
  "torch>=2.3",
  "torchvision",
  "tqdm"
]

[project.optional-dependencies]
cuda12 = ["jax[cuda12]"]
cuda12_local = ["jax[cuda12_local]"]
cuda11 = ["jax[cuda11]"]

[project.urls]
"Homepage" = "https://github.com/scbirlab/yunta"
"Bug Tracker" = "https://github.com/scbirlab/yunta/issues"

[project.scripts]  # Optional
yunta = "yunta.cli:main"

[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
